--- a/src/App.css
+++ b/src/App.css
@@ -1,8 +1,9 @@
 #root {
   max-width: 1280px;
   margin: 0 auto;
-  padding: 2rem;
+  padding: 1rem;
   text-align: center;
+  font-family: Verdana, Geneva, Tahoma, sans-serif;
 }
 
 .imagem-container {
@@ -17,6 +18,10 @@
   color: white;
   font-size: 75px;
   text-shadow: 4px 0 0 black;
+
+  @media screen and (max-width: 768px) {
+    font-size: 50px;
+  }
 }
 
 .navegacao {
@@ -48,6 +53,11 @@
   background: transparent;
   border-radius: 5px;
   font-size: 13px;
+
+  @media screen and (max-width:768px) {
+    width: 30%;
+    font-size: 10px;
+  }
 
   &:hover {
     background-color: rgb(54, 15, 71);
